<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/home_but_home"
        android:layout_width="140dp"
        android:layout_height="56dp"
        android:layout_marginBottom="20dp"
        android:text="Home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/routes_but_home" />

    <Button
        android:id="@+id/routes_but_home"
        android:layout_width="140dp"
        android:layout_height="56dp"
        android:layout_marginBottom="20dp"
        android:text="Routes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/home_but_home"
        app:layout_constraintRight_toLeftOf="@id/test_but_home"/>

    <Button
        android:id="@+id/test_but_home"
        android:layout_width="140dp"
        android:layout_height="56dp"
        android:layout_marginBottom="20dp"
        android:text="Testing"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/routes_but_home"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView

        android:id="@+id/home_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:text="Home"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>


    <TextView
        android:id="@+id/Display_Steps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Current Steps:"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.134" />

    <TextView
        android:id="@+id/CurrentSteps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.26"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/distanceTraveled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text='"00.00 miles"'
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.838"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.213" />

    <TextView
        android:layout_width="124dp"
        android:layout_height="35dp"
        android:text="Distance Traveled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.898"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15" />

    <Button
        android:id="@+id/start_walk"
        android:layout_width="180dp"
        android:layout_height="58dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="4dp"
        android:text="Start Walk"
        app:layout_constraintBottom_toTopOf="@+id/home_but_home"
        app:layout_constraintEnd_toStartOf="@+id/end_walk"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/end_walk"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="4dp"
        android:text="End Walk"
        app:layout_constraintBottom_toTopOf="@+id/routes_but_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/start_walk" />

    <TextView
        android:id="@+id/recent_stats_text"
        android:layout_width="138dp"
        android:layout_height="26dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="249dp"
        android:layout_marginRight="249dp"
        android:layout_marginBottom="12dp"
        android:text="Recent Walk Stats"
        app:layout_constraintBottom_toTopOf="@+id/textView13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="331dp"
        android:layout_marginRight="331dp"
        android:layout_marginBottom="12dp"
        android:text="Distance"
        app:layout_constraintBottom_toTopOf="@+id/textView12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="355dp"
        android:layout_marginRight="355dp"
        android:layout_marginBottom="10dp"
        android:text="Time"
        app:layout_constraintBottom_toTopOf="@+id/start_walk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="315dp"
        android:layout_marginRight="315dp"
        android:layout_marginBottom="12dp"
        android:text="Total Steps"
        app:layout_constraintBottom_toTopOf="@+id/textView11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/recentWalkSteps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginLeft="23dp"
        android:layout_marginEnd="234dp"
        android:layout_marginRight="234dp"
        android:layout_marginBottom="12dp"
        android:text="TextView"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/recentWalkDist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView13" />

    <TextView
        android:id="@+id/recentWalkTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginEnd="233dp"
        android:layout_marginRight="233dp"
        android:layout_marginBottom="12dp"
        android:text="TextView"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/start_walk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView12" />

    <TextView
        android:id="@+id/recentWalkDist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginLeft="41dp"
        android:layout_marginEnd="232dp"
        android:layout_marginRight="232dp"
        android:layout_marginBottom="7dp"
        android:text="TextView"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/recentWalkTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView11" />


</androidx.constraintlayout.widget.ConstraintLayout>