...
        android:layout_height="40dp"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="16dp"
        android:text="Enter height in inches:"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/userHeight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/userHeight"
...
